media/requestrr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: requestrr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4545
      protocol: TCP
  selector:
    name: requestrr
