media/requestrr/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: requestrr
  namespace: media
spec:
  parentRefs:
    - name: media
  hostnames:
    - requestrr.192.168.86.2.nip.io
  rules:
    - matches:
      backendRefs:
        - name: requestrr
          port: 4545
