media/requestrr/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: requestrr
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`requestrr.192.168.86.2.nip.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - kind: Service
          name: requestrr
          port: 4545
